<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left|center_vertical|center_horizontal|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/a_button"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:text="@string/a_button">

        </Button>

        <TextView
            android:id="@+id/aChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/b_button"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:text="@string/b_button"></Button>

        <TextView
            android:id="@+id/bChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/c_button"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:text="@string/c_button"></Button>

        <TextView
            android:id="@+id/cChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/d_button"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:text="@string/d_button"></Button>

        <TextView
            android:id="@+id/dChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/e_button"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:text="@string/e_button"></Button>

        <TextView
            android:id="@+id/eChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:text="Prev"></Button>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:text="Next"></Button>

    </LinearLayout>
</LinearLayout>
